docs: STATUS + backlog for the overnight quality and security sweep
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>